--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 
     
-
+<meta name="google-site-verification" content="2lwCKCZ1iYOVNTmWVGtB7oetHFeF0XinZA7FyovO6iY" />
 <meta property="og:site_name" content="PREMANTOTO | Bandar Togel Dan Agen Toto Resmi Terpercaya JP Besar X500">
 <meta property="og:url" content="https://587ad8-82.myshopify.com/products/premantoto-bandar-togel-dan-agen-toto-resmi-terpercaya-jp-besar-x500">
 <meta property="og:title" content="PREMANTOTO | Bandar Togel Dan Agen Toto Resmi Terpercaya JP Besar X500">
